[package]
name = "bridge-relayer-v1"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive"] }
directories = "5.0.1"
libp2p = { version = "0.54.1", features = ["ed25519", "identify"] }
sha3 = "0.10.8"
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.14.0"
